识别小程序码

--- a/app.json
+++ b/app.json
@@ -1,7 +1,9 @@
 {
   "pages": [
     "pages/index/index",
-    "pages/logs/logs"
+    "pages/danmu/danmu",
+    "pages/logs/logs",
+    "pages/room/room"
   ],
   "window": {
     "backgroundTextStyle": "light",
